Commit : app creation layouts & classes

--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/meeting_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,10 +12,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/room_image"
+        android:src="@drawable/ic_icons8_chrome_48"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_icons8_chrome_48"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/item_list_delete_button"
@@ -35,13 +34,13 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="16dp"
+        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
         app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
         app:layout_constraintTop_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/meeting_topic"
@@ -64,18 +63,17 @@
             android:layout_marginEnd="8dp"
             android:text="-"
             android:textSize="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/meeting_hour"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/meeting_topic"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/meeting_hour"
+            android:id="@+id/date_and_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text=" 15h00"
+            android:text="15h00"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/hyphen2"
@@ -92,7 +90,6 @@
             android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/meeting_room"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/meeting_hour"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -108,16 +105,16 @@
 
         <TextView
             android:id="@+id/guests_email_list"
-            android:layout_height="20dp"
-            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
             android:singleLine="true"
             android:text="pierre@lamzone.com - marc@lamzone.com"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/constraintLayoutMeeting"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayoutMeeting"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayoutMeeting"
-            />
+            app:layout_constraintStart_toStartOf="@+id/constraintLayoutMeeting" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
