--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="dark_grey">#2A2A2A</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="primaryColor">#e53935</color>
+    <color name="primaryLightColor">#ff6f60</color>
+    <color name="primaryDarkColor">#ab000d</color>
+    <color name="secondaryColor">#757575</color>
+    <color name="secondaryLightColor">#a4a4a4</color>
+    <color name="secondaryDarkColor">#494949</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
 </resources>
