--- a/app/src/main/res/layout/meeting_list_activity.xml
+++ b/app/src/main/res/layout/meeting_list_activity.xml
@@ -21,7 +21,9 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:tintMode="@color/white"
+        />
 
 
 
