--- a/app/src/main/res/layout/add_meeting_activity.xml
+++ b/app/src/main/res/layout/add_meeting_activity.xml
@@ -1,146 +1,189 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <TextView
-        android:id="@+id/text_view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/title_activity_add_meeting"
-        android:textSize="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/text_input_meeting_topic"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Sujet de la réunion"
-        app:layout_constraintBottom_toTopOf="@+id/guideline1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_title"
-        app:layout_constraintVertical_bias="0.307" />
-
-
-    <TextView
-        android:id="@+id/textViewDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="21/06/2021"
-        android:textColor="@color/design_default_color_primary_variant"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/date_picker_actions"
-        app:layout_constraintEnd_toEndOf="@+id/date_picker_actions"
-        app:layout_constraintStart_toStartOf="@+id/date_picker_actions"
-        app:layout_constraintTop_toTopOf="@+id/guideline1" />
-
-    <TextView
-        android:id="@+id/textViewTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="08 : 00"
-        android:textColor="@color/purple_200"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/time_picker_action"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="@+id/time_picker_action"
-        app:layout_constraintTop_toTopOf="@+id/textViewDate" />
-
-    <Button
-        android:id="@+id/date_picker_actions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Selection date"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toStartOf="@+id/time_picker_action"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:cornerRadius="20dp"/>
-
-    <Button
-        android:id="@+id/time_picker_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="selection heure"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_weight="2"
-        app:layout_constraintStart_toEndOf="@+id/date_picker_actions"
-        app:layout_constraintTop_toTopOf="@+id/date_picker_actions"
-        app:cornerRadius="20dp"/>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/text_input_email"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:hint="adresse email participants"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
     <ScrollView
-        android:id="@+id/guests_email_list"
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:lines="10"
-        android:minLines="2"
-        android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_email" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonValidate"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"
-        android:text="VALIDER"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guests_email_list"
-        app:cornerRadius="20dp"/>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview01"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_marginTop="4dp"
+            android:padding="@dimen/cardview_default_padding"
+            app:cardCornerRadius="@dimen/dimens_radius"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintbottom_toTopOf="cardview02">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/text_input_meeting_topic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/cardview_default_margin"
+                    android:layout_marginTop="@dimen/cardview_default_margin"
+                    android:layout_marginEnd="@dimen/cardview_default_margin"
+                    android:hint="@string/add_meeting_topic"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/info_text_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_default"
+                    android:text="@string/add_meeting_date"
+                    app:layout_constraintBottom_toTopOf="@+id/date_picker_actions"
+                    app:layout_constraintEnd_toEndOf="@+id/date_picker_actions"
+                    app:layout_constraintStart_toStartOf="@+id/date_picker_actions" />
+
+                <Button
+                    android:id="@+id/date_picker_actions"
+                    android:layout_width="@dimen/button_default_width"
+                    android:layout_height="@dimen/button_default_height"
+                    android:layout_marginStart="@dimen/cardview_default_margin"
+                    android:layout_marginTop="64dp"
+                    android:layout_marginBottom="32dp"
+                    android:text="@string/add_meeting_date_picker"
+                    app:cornerRadius="@dimen/button_default_radius"
+                    app:layout_constraintBottom_toTopOf="@+id/info_text_room"
+                    app:layout_constraintEnd_toStartOf="@+id/time_picker_action"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_input_meeting_topic" />
+
+                <TextView
+                    android:id="@+id/info_text_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_default"
+                    android:text="HEURE"
+                    app:layout_constraintBottom_toTopOf="@+id/time_picker_action"
+                    app:layout_constraintEnd_toEndOf="@+id/time_picker_action"
+                    app:layout_constraintStart_toStartOf="@+id/time_picker_action" />
+
+                <Button
+                    android:id="@+id/time_picker_action"
+                    android:layout_width="@dimen/button_default_width"
+                    android:layout_height="@dimen/button_default_height"
+                    android:layout_marginEnd="@dimen/cardview_default_margin"
+                    android:text="@string/add_meeting_timepicker"
+                    app:cornerRadius="@dimen/button_default_radius"
+                    app:layout_constraintBottom_toBottomOf="@+id/date_picker_actions"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/date_picker_actions"
+                    app:layout_constraintTop_toTopOf="@+id/date_picker_actions" />
+
+                <TextView
+                    android:id="@+id/info_text_room"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_default"
+                    android:text="@string/add_meeting_room"
+                    app:layout_constraintBottom_toTopOf="@+id/spinner_room"
+                    app:layout_constraintEnd_toEndOf="@+id/spinner_room"
+                    app:layout_constraintStart_toStartOf="@+id/spinner_room" />
+
+                <Spinner
+                    android:id="@+id/spinner_room"
+                    android:layout_width="@dimen/button_default_width"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="@dimen/cardview_default_margin"
+                    android:layout_marginBottom="32dp"
+                    app:layout_constraintEnd_toStartOf="@+id/spinner_duration"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/spinner_duration" />
+
+                <TextView
+                    android:id="@+id/info_text_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_default"
+                    android:text="@string/add_meeting_duration"
+                    app:layout_constraintBottom_toTopOf="@+id/spinner_duration"
+                    app:layout_constraintEnd_toEndOf="@+id/spinner_duration"
+                    app:layout_constraintStart_toStartOf="@+id/spinner_duration" />
+
+                <Spinner
+                    android:id="@+id/spinner_duration"
+                    android:layout_width="@dimen/button_default_width"
+                    android:layout_height="45dp"
+                    android:layout_marginEnd="@dimen/cardview_default_margin"
+                    app:layout_constraintBottom_toBottomOf="@+id/spinner_room"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/spinner_room"
+                    app:layout_constraintTop_toTopOf="@+id/spinner_room" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/text_input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="@dimen/cardview_default_margin"
+                    android:layout_marginTop="@dimen/cardview_default_margin"
+                    android:layout_marginEnd="@dimen/cardview_default_margin"
+                    android:hint="@string/add_meeting_email"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_room" />
+
+                <ScrollView
+                    android:id="@+id/guests_email_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_margin="@dimen/cardview_default_margin"
+                    android:layout_marginStart="@dimen/cardview_default_margin"
+                    android:layout_marginTop="@dimen/cardview_default_margin"
+                    android:layout_marginEnd="@dimen/cardview_default_margin"
+                    android:ems="10"
+                    android:inputType="textEmailAddress"
+                    android:lines="5"
+                    android:minLines="2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_input_email">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </ScrollView>
+
+                <Button
+                    android:id="@+id/buttonValidate"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/button_default_height"
+                    android:layout_marginTop="@dimen/cardview_default_margin"
+                    android:layout_marginBottom="@dimen/cardview_default_margin"
+                    android:text="@string/add_meeting_validate_button"
+                    app:cornerRadius="@dimen/button_default_radius"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/guests_email_list" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
