--- a/app/src/main/res/layout/add_meeting_activity.xml
+++ b/app/src/main/res/layout/add_meeting_activity.xml
@@ -22,8 +22,7 @@
             app:cardCornerRadius="@dimen/dimens_radius"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintbottom_toTopOf="cardview02">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -71,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_default"
-                    android:text="HEURE"
+                    android:text="@string/add_meeting_time"
                     app:layout_constraintBottom_toTopOf="@+id/time_picker_action"
                     app:layout_constraintEnd_toEndOf="@+id/time_picker_action"
                     app:layout_constraintStart_toStartOf="@+id/time_picker_action" />
@@ -139,6 +138,7 @@
                     android:layout_marginTop="@dimen/cardview_default_margin"
                     android:layout_marginEnd="@dimen/cardview_default_margin"
                     android:hint="@string/add_meeting_email"
+                    android:inputType="textEmailAddress"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/spinner_room" />
@@ -152,17 +152,12 @@
                     android:layout_marginTop="@dimen/cardview_default_margin"
                     android:layout_marginEnd="@dimen/cardview_default_margin"
                     android:ems="10"
-                    android:inputType="textEmailAddress"
                     android:lines="5"
                     android:minLines="2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text_input_email">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
 
                 </ScrollView>
 
@@ -181,9 +176,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/guests_email_list" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
-
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
