--- a/app/src/main/res/layout/item_meeting.xml
+++ b/app/src/main/res/layout/item_meeting.xml
@@ -39,9 +39,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_toStartOf="@+id/item_list_delete_button"
+            android:layout_toStartOf="@+id/delete_button"
             android:layout_toEndOf="@+id/item_list_avatar"
-            app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
+            app:layout_constraintEnd_toStartOf="@+id/delete_button"
             app:layout_constraintStart_toEndOf="@+id/item_list_avatar">
 
             <TextView
@@ -131,7 +131,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageButton
-            android:id="@+id/item_list_delete_button"
+            android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
