--- a/app/src/main/res/layout/item_meeting.xml
+++ b/app/src/main/res/layout/item_meeting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="@dimen/margin_default"
     android:elevation="1dp"
     app:cardCornerRadius="4dp"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -20,9 +20,9 @@
             android:id="@+id/item_list_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginBottom="@dimen/margin_default"
             android:contentDescription="@string/room_image"
             android:src="@drawable/ic_icons8_chrome_48"
             app:layout_constraintBottom_toBottomOf="parent"
