--- a/app/src/main/res/layout/item_meeting.xml
+++ b/app/src/main/res/layout/item_meeting.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_default"
+    android:layout_margin="4dp"
     android:elevation="1dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="@dimen/dimens_radius"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:layout_editor_absoluteX="1dp">
@@ -65,8 +65,8 @@
                 android:id="@+id/hyphen1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginEnd="@dimen/margin_default"
                 android:text="-"
                 android:textSize="16sp"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -90,8 +90,8 @@
                 android:id="@+id/hyphen2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginEnd="@dimen/margin_default"
                 android:text="-"
                 android:textSize="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/meeting_room"
@@ -102,7 +102,7 @@
                 android:id="@+id/meeting_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/margin_default"
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
@@ -136,12 +136,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/margin_default"
             android:background="@null"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/ic_delete_black_24dp" />
+            app:srcCompat="@drawable/ic_delete_black_24dp"
+            app:tint="@color/lamzone_900" />
 
     </RelativeLayout>
 
