--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="button_default_width">150dp</dimen>
     <dimen name="button_default_height">50dp</dimen>
     <dimen name="button_default_radius">25dp</dimen>
+    <dimen name="text_size_title_toolbar">36sp</dimen>
+    <dimen name="text_size_normal_toolbar">18sp</dimen>
+    <dimen name="text_size_title">36sp</dimen>
+    <dimen name="text_size_normal">18sp</dimen>
+    <dimen name="text_size_spinner">14sp</dimen>
 </resources>
