--- a/app/src/main/res/layout/room_dropdown_item.xml
+++ b/app/src/main/res/layout/room_dropdown_item.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="wrap_content">
+    android:layout_width="@dimen/spinner_width"
+    android:layout_height="@dimen/spinner_item_height">
 
     <ImageView
         android:id="@+id/meeting_room_icon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="2dp"
-        android:layout_margin="2dp"
-        android:src="@drawable/ic_icons_konqueror" />
+        android:layout_width="@dimen/spinner_item_height"
+        android:layout_height="match_parent"
+        android:layout_marginStart="1dp"
+        android:layout_margin="1dp"
+        android:src="@drawable/ic_icons_konqueror"
+        android:contentDescription="@string/spinner_meeting_icon" />
 
     <TextView
-        android:id="@+id/meeting_duration_text"
+        android:id="@+id/meeting_room_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -21,8 +22,8 @@
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@id/meeting_room_icon"
         android:gravity="center_vertical"
-        android:textSize="@dimen/text_size_spinner"
-        android:text="Konkqueror" />
+        android:textSize="@dimen/room_text_size_spinner"
+        android:text="@string/spinner_meeting_room" />
 
 
 </RelativeLayout>
