--- a/app/src/main/res/layout/time_dropdown_item.xml
+++ b/app/src/main/res/layout/time_dropdown_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="@dimen/spinner_width"
+    android:layout_height="@dimen/spinner_item_height">
 
     <TextView
-        android:id="@+id/meeting_duration_text"
+        android:id="@+id/meeting_room_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/spinner_item_height"
         android:layout_centerVertical="true"
-        android:gravity="center_vertical"
-        android:text="00:15"
+        android:gravity="center"
+        android:text="@string/time_spinner_duration"
+        android:textAlignment="center"
+        android:textSize="@dimen/date_text_size_spinner"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="@dimen/text_size_spinner"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
