--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,13 +3,14 @@
     <dimen name="dimens_radius">4dp</dimen>
     <dimen name="margin_default">8dp</dimen>
     <dimen name="cardview_default_padding">8dp</dimen>
-    <dimen name="cardview_default_margin">16dp</dimen>
-    <dimen name="button_default_width">150dp</dimen>
+    <dimen name="cardview_default_margin">12dp</dimen>
+    <dimen name="button_default_width">160dp</dimen>
     <dimen name="button_default_height">50dp</dimen>
-    <dimen name="button_default_radius">25dp</dimen>
-    <dimen name="text_size_title_toolbar">36sp</dimen>
+    <dimen name="button_default_radius">20dp</dimen>
     <dimen name="text_size_normal_toolbar">18sp</dimen>
-    <dimen name="text_size_title">36sp</dimen>
-    <dimen name="text_size_normal">18sp</dimen>
-    <dimen name="text_size_spinner">14sp</dimen>
+    <dimen name="text_size_normal">16sp</dimen>
+    <dimen name="room_text_size_spinner">14sp</dimen>
+    <dimen name="date_text_size_spinner">18sp</dimen>
+    <dimen name="spinner_item_height">32dp</dimen>
+    <dimen name="spinner_width">120dp</dimen>
 </resources>
