Commit : fix filter icon

--- a/app/src/main/res/layout/create_meeting_activity.xml
+++ b/app/src/main/res/layout/create_meeting_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -64,10 +65,10 @@
                 android:id="@+id/cardview01"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_marginTop="4dp"
+
                 android:padding="@dimen/cardview_default_padding"
                 app:cardCornerRadius="@dimen/dimens_radius"
+                android:elevation="1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
@@ -109,6 +110,7 @@
                         android:layout_marginTop="64dp"
                         android:layout_marginBottom="32dp"
                         android:text="@string/add_meeting_date_picker"
+                        android:textColorHint="@color/primaryTextColor"
                         android:textSize="@dimen/text_size_normal"
                         app:cornerRadius="@dimen/button_default_radius"
                         app:layout_constraintBottom_toTopOf="@+id/info_text_room"
@@ -210,7 +212,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/text_input_email"/>
+                        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
+                        tools:ignore="NestedScrolling" />
 
                     <Button
                         android:id="@+id/buttonValidate"
@@ -229,6 +232,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
