--- a/app/src/main/res/layout/item_meeting.xml
+++ b/app/src/main/res/layout/item_meeting.xml
@@ -20,11 +20,9 @@
             android:id="@+id/item_list_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="@dimen/margin_default"
-            android:layout_marginTop="@dimen/margin_default"
-            android:layout_marginBottom="@dimen/margin_default"
+            android:layout_margin="@dimen/margin_default"
             android:contentDescription="@string/room_image"
-            android:src="@drawable/ic_icons8_chrome_48"
+            android:src="@drawable/ic_icons_konqueror"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/constraint_layout_meeting"
             app:layout_constraintHorizontal_bias="0.5"
@@ -35,10 +33,7 @@
             android:id="@+id/constraint_layout_meeting"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="@dimen/margin_default"
             android:layout_toStartOf="@+id/delete_button"
             android:layout_toEndOf="@+id/item_list_avatar"
             app:layout_constraintEnd_toStartOf="@+id/delete_button"
@@ -46,15 +41,15 @@
 
             <TextView
                 android:id="@+id/meeting_topic"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginEnd="8dp"
+                android:singleLine="true"
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="Reunion 1 topic"
+                android:text="@string/reunion_item"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/hyphen1"
@@ -79,15 +74,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="15h00"
+                android:text="@string/hour_item"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/hyphen2"
+                app:layout_constraintEnd_toStartOf="@+id/hyphen3"
                 app:layout_constraintStart_toEndOf="@+id/hyphen1"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/hyphen2"
+                android:id="@+id/hyphen3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
@@ -103,28 +98,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
+                android:singleLine="true"
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="Chrome"
+                android:text="@string/spinner_meeting_room"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/hyphen2"
+                app:layout_constraintStart_toEndOf="@+id/hyphen3"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/guests_email_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="defaut@lamzone.com - defaut@lamzone.com"
+                android:freezesText="true"
+                android:text="@string/default_email_list"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/meeting_topic" />
